# ncurses-pure-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
examples/: colors.rs  dialog.rs  form.rs  hello.rs  key_test.rs  keys.rs  menu.rs  mouse.rs  panels.rs  progress.rs  windows.rs
src/: acs.rs  attr.rs  color.rs  error.rs  form.rs  input.rs  key.rs  lib.rs  line.rs  menu.rs  mouse.rs  panels.rs  screen.rs  slk.rs  terminal.rs  threadsafe.rs  trace.rs  types.rs  wide.rs  window.rs
tests/: integration_tests.rs
